refactor: 함수 축약